Change (fix?) scrollbar background

--- a/src/assets/styles/Main.sass
+++ b/src/assets/styles/Main.sass
@@ -19,13 +19,11 @@ p
 ::-webkit-scrollbar
   width: 10px
   height: 10px
+  background: $colorGrey !important
 
 ::-webkit-scrollbar-thumb
   border-radius: 5px
   background: #00000040
-
-::-webkit-scrollbar-track
-  background: $colorGrey !important
 
 @media only screen and (min-width: 768px)
   .main-container
